# rdkb-CcspLogAgent

./: CONTRIBUTING.md  Makefile  Makefile.am  Makefile.orig  NOTICE  cmpnt_build_custom_pre.mk  configure.ac
arch/intel_usg/boards/rdkb_arm/: cmpnt_build_custom_pre.mk
arch/intel_usg/boards/rdkb_arm/config/comcast/: LogAgent.xml
cfg/: Makefile.am
scripts/: LogAgent.xml  msg_daemon.cfg
source/: Makefile.am
source/LogComponent/: Makefile.am  cosa_apis_logagentplugin.c  cosa_apis_logagentplugin.h  plugin_main.c  plugin_main.h  ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
source/test/: Makefile.am  gtest_main.cpp  log_agentTest.cpp
